--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -10,10 +10,7 @@ grapl-config = {path="../grapl-config", version="*"}
 grapl-observe = {path = "../grapl-observe"}
 grapl-service = {path="../grapl-service"}
 aws_lambda_events = "0.2.1"
-base16 = "0.1.1"
-dgraph-rs = "0.1.2"
 futures = "0.3.*"
-grpc = "0.6.1"
 
 base64 = "0.13"
 bytes = "1"
@@ -21,16 +18,14 @@ failure = "0.1"
 log = "0.4"
 prost = "0.7"
 
-rusoto_s3 = { version="0.45", default_features = false, features=["rustls"] }
-rusoto_core = { version="0.45", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.45", default_features = false, features=["rustls"] }
-rusoto_credential = "0.45"
+rusoto_s3 = { version="0.46", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.46", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.46", default_features = false, features=["rustls"] }
+rusoto_credential = "0.46"
 
-lambda_runtime = "0.2.*"
 async-trait = "0.1.22"
 zstd = "0.6"
-tokio-compat = "0.1.*"
-tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
 chrono = "0.4.11"
 sqs-executor = { path = "../sqs-executor/" }
 thiserror = "1.0.23"
