--- a/src/rust/sqs-executor/Cargo.toml
+++ b/src/rust/sqs-executor/Cargo.toml
@@ -10,18 +10,15 @@ edition = "2018"
 grapl-observe = { path = "../grapl-observe" }
 grapl-utils = { path = "../grapl-utils" }
 
-rusoto_core = {version = "0.45", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "0.45", default_features = false, features=["rustls"]}
-rusoto_sqs = {version = "0.45", default_features = false, features=["rustls"]}
+rusoto_core = {version = "0.46", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.46", default_features = false, features=["rustls"]}
+rusoto_sqs = {version = "0.46", default_features = false, features=["rustls"]}
 
-tokio = { version = "0.2", features = ["io-util", "sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "1", features = ["io-util", "sync", "rt", "macros", "time", "rt-multi-thread"] }
 
 serde = "1.0"
 serde_json = "1.0"
 prost = "0.7"
-zstd = "0.6"
-eyre = "0.6.3"
-color-eyre = "0.5.10"
 thiserror = "1.0.22"
 async-trait = "0.1.42"
 tracing = "0.1.22"
@@ -30,12 +27,11 @@ futures-util = "0.3.8"
 uuid = {version = "0.8.1", features=["v4"]}
 lazy_static = "1.4"
 futures = "0.3.8"
-darkredis = "0.7.0"
+darkredis = "0.8.0"
 num_cpus = "1.13.0"
 hex = "0.4.2"
 tap = "1.0.0"
 chrono = "0.4.19"
 aws_lambda_events = "0.3.1"
-parking_lot = "0.11.1"
 stopwatch = "0.0.7"
 lru = "0.6"
