--- a/docker-compose.zips.yml
+++ b/docker-compose.zips.yml
@@ -85,6 +85,20 @@ services:
       - TAG=${TAG:-latest}
     command: cp /home/grapl/lambda.zip model-plugin-deployer-${TAG:-latest}.zip
 
+  provisioner-zip:
+    image: grapl/provisioner-zip:${TAG:-latest}
+    build:
+      context: src
+      dockerfile: ./python/Dockerfile
+      target: provisioner-zip
+    volumes:
+      - ./src/js/grapl-cdk/zips:/grapl
+    user: ${UID}:${GID}
+    working_dir: /grapl
+    environment:
+      - TAG=${TAG:-latest}
+    command: cp /home/grapl/lambda.zip provisioner-${TAG:-latest}.zip
+
   #
   # JS/web services
   #
