--- a/pants.toml
+++ b/pants.toml
@@ -1,6 +1,7 @@
 [GLOBAL]
 pants_version = "2.2.0"
 backend_packages = [
+  "pants.backend.awslambda.python",
   "pants.backend.codegen.protobuf.python",
   "pants.backend.python",
   "pants.backend.python.lint.isort",
@@ -49,7 +50,9 @@ root_patterns = [
   "/src/python/grapl-model-plugin-deployer/tests",
   "/src/python/grapl_provision",
   "/src/python/grapl-tests-common",
-  "/src/python/grapl-ux-router/src"
+  "/src/python/grapl-ux-router/src",
+  "/src/python/provisioner/src",
+  "/src/python/provisioner/tests",
 ]
 
 [python-setup]
