--- a/.github/workflows/grapl-docs.yml
+++ b/.github/workflows/grapl-docs.yml
@@ -4,8 +4,8 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
-      - staging
-      - master
+      - staging  # TODO: Delete after https://github.com/grapl-security/issue-tracker/issues/224
+      - main
 
 jobs:
   # NOTE: RtD will build and deploy our docs after-the-fact; but we'd like to prevent faulty
