--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -132,6 +132,8 @@ jobs:
           fi
           deactivate
 
+  # https://github.com/grapl-security/issue-tracker/issues/224
+  # TODO: Figure out the new way to mark latest/beta
   release-services:
     runs-on: ubuntu-latest
     needs: [rust-unit-tests, python-unit-tests, js-unit-tests, integration-tests, check-pypi]
