--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -23,7 +23,7 @@ services:
       - DEPLOYMENT_NAME
       - IS_LOCAL=True
       - MG_ALPHAS
-      - SOURCE_QUEUE_URL=${SQS_ENDPOINT}/queue/grapl-node-identifier-retry-queue
+      - SOURCE_QUEUE_URL=${SQS_ENDPOINT}/queue/${DEPLOYMENT_NAME}-node-identifier-retry-queue
       - GRAPH_MERGER_QUEUE_URL=${SQS_ENDPOINT}/queue/grapl-graph-merger-queue
       - STATIC_MAPPING_TABLE=${DEPLOYMENT_NAME}-static_mapping_table
       - DYNAMIC_SESSION_TABLE=${DEPLOYMENT_NAME}-dynamic_session_table
