Add foundations for import-awareness
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/pulumi/Pulumi.local-grapl.yaml
+++ b/pulumi/Pulumi.local-grapl.yaml
@@ -11,3 +11,4 @@ config:
   aws:secretKey: test
   aws:skipCredentialsValidation: "true"
   aws:skipRequestingAccountId: "true"
+  grapl:import_from_existing: "False"
