Add tooling for handling of Python virtualenv
Previously, we had `build-support/generate-constraints.sh`, which was
only used for (re)generating our `constraints.txt` file, which Pants
uses as a kind of lockfile.

However, the virtual environment that is created as a byproduct of
that command is also useful for other reasons. Among other things,
activating that virtualenv can be useful for editor integrations.

Here, replace the old `generate_constraints.sh` script with a more
powerful `manage_virtualenv.sh` script. This allows us to centralize
our virutalenv management operations in a single place.

Running `build-support/manage_virtualenv.sh populate` will create a
fresh virtualenv containing everything from our `constraints.txt`
lockfile.

Running `build-support/manage_virtualenv.sh regenerate-constraints`
will create a fresh virtualenv based on our `requirements.txt` file,
along with any dependencies specified in our Pants configuration. This
virtualenv will then be used to create an updated `constraints.txt`
file.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,8 @@ dist/
 /dist/
 /.pids
 /.pants.workdir.file_lock*
-# See build-support/generate_constraints.sh
-/build-support/.constraints-venv
+# See build-support/manage_virtualenv.sh
+/build-support/grapl-venv
 .yarn/
 
 # Generated when profiling rust code
