--- a/local-grapl.env
+++ b/local-grapl.env
@@ -29,6 +29,7 @@ GRAPL_GRAPHQL_PORT=5000
 GRAPL_MODEL_PLUGIN_DEPLOYER_PORT=8123
 GRAPL_NOTEBOOK_PORT=8888
 GRAPL_UX_ROUTER_PORT=8901
+GRAPH_MUTATION_PORT=5500
 
 # Redis default port
 REDIS_PORT=6379
@@ -71,6 +72,7 @@ AWS_REGION=us-east-1
 
 LOCALSTACK_HOST=aws.grapl.test
 DGRAPH_HOST=dgraph.grapl.test
+GRAPH_MUTATION_HOST=graph_mutation.grapl.test
 GRAPL_API_HOST=api.grapl.test
 REDIS_HOST=redis.grapl.test
 S3_HOST=s3.${AWS_REGION}.amazonaws.com
