--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -38,6 +38,29 @@ services:
       - DYNAMODB_ACCESS_KEY_ID
       - DYNAMODB_ACCESS_KEY_SECRET
 
+  grapl-rust-graph-merger-integration-tests:
+    image: grapl/grapl-graph-merger-test:${TAG:-latest}
+    build:
+      context: ${PWD}/src
+      dockerfile: rust/Dockerfile
+      target: build-test-integration
+      args:
+        - CARGO_PROFILE=debug
+    command: bash -c "
+      wait-for-it grapl-provision:${WAIT_PORT} --timeout=180 &&
+      cargo test --manifest-path graph-merger/Cargo.toml --features integration"
+    environment:
+      - AWS_REGION
+      - GRAPL_LOG_LEVEL=${GRAPL_LOG_LEVEL:-INFO}
+      - RUST_LOG=INFO
+      - RUST_BACKTRACE=1
+      - DEPLOYMENT_NAME
+      - IS_LOCAL=True
+      - RETRY_QUEUE_URL="${SQS_ENDPOINT}/queue/grapl-graph-merger-retry-queue"
+      - SOURCE_QUEUE_URL="${SQS_ENDPOINT}/queue/grapl-graph-merger-queue"
+      - MUTATION_ENDPOINT="http://${GRAPH_MUTATION_HOST}:${GRAPH_MUTATION_PORT}"
+      - MG_ALPHAS
+
   grapl-analyzerlib-integration-tests:
     image: grapl/grapl-analyzerlib-test:${TAG:-latest}
     build:
