Fix up the endpoint url

--- a/local-grapl.env
+++ b/local-grapl.env
@@ -93,6 +93,7 @@ GRAPL_UX_ROUTER_HOST=ux-router.grapl.test
 # only for usage within the Docker Compose network.
 ########################################################################
 
+MUTATION_ENDPOINT=http://${GRAPH_MUTATION_HOST}:${GRAPH_MUTATION_PORT}
 REDIS_ENDPOINT=http://${REDIS_HOST}:${REDIS_PORT}
 S3_ENDPOINT=http://${S3_HOST}:${S3_PORT_INTERNAL}
 
