--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -242,7 +242,7 @@ services:
       SOURCE_QUEUE_URL: "${SQS_ENDPOINT}/queue/grapl-graph-merger-queue"
       <<: *sqs-env
       <<: *rust-backtrace
-      MUTATION_ENDPOINT: "http://${GRAPH_MUTATION_HOST}:${GRAPH_MUTATION_PORT}"
+      MUTATION_ENDPOINT: "${MUTATION_ENDPOINT}"
     tty: false
     depends_on:
       - dgraph
@@ -251,7 +251,6 @@ services:
       - localstack
       - redis
       - s3
-
 
   grapl-graph-mutation-service:
     image: grapl/grapl-graph-mutation-service:${TAG:-latest}
