--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -242,7 +242,7 @@ services:
       SOURCE_QUEUE_URL: "${SQS_ENDPOINT}/queue/grapl-graph-merger-queue"
       <<: *sqs-env
       <<: *rust-backtrace
-      MUTATION_ENDPOINT: "${MUTATION_ENDPOINT}"
+      GRAPH_MUTATION_ENDPOINT: "${GRAPH_MUTATION_ENDPOINT}"
     tty: false
     depends_on:
       - dgraph
