--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -16,7 +16,7 @@ serde = "1.0.110"
 serde_json = "1.0.53"
 serde_derive = "1.0.110"
 failure = "0.1.*"
-prost = "0.6.*"
+prost = "0.7"
 log = "0.4.3"
 regex = "1.1.0"
 lazy_static = "1.2.0"
@@ -29,9 +29,9 @@ rusoto_core = {version="0.46.0", default_features = false, features=["rustls"]}
 rusoto_sqs = {version="0.46.0", default_features = false, features=["rustls"]}
 rusoto_credential = "0.46.0"
 futures = "0.3.*"
-aws_lambda_events = "0.2.0"
+aws_lambda_events = "0.4"
 
-async-trait = "0.1.31"
+async-trait = "0.1"
 thiserror = "1.0.22"
 
 zstd = "0.6"
