--- a/src/rust/graph-mutation-service/Cargo.toml
+++ b/src/rust/graph-mutation-service/Cargo.toml
@@ -4,47 +4,38 @@ version = "0.1.0"
 authors = ["colin <colin@graplsecurity.com>"]
 edition = "2018"
 
-
 [[bin]]
 name = "graph-mutation-service"
-
 
 [lib]
 name = "graph_mutation_service_lib"
 
-
 [dependencies]
+anyhow = "1"
+dgraph-tonic = { version = "0.9", features = ["dgraph-1-1"] }
+dgraph_query_lib = "0.1.0"
+futures = { version = "0.3", default-features = false, features = ["alloc"] }
+futures-retry = "0.6"
+grapl-config = { path="../grapl-config" }
+grapl-graph-descriptions = { path="../graph-descriptions" }
+grapl-observe = { path = "../grapl-observe" }
+grapl-utils = { path = "../grapl-utils" }
+lazy_static = "1.4"
+lru = "0.6"
 prost = "0.7"
 prost-derive = "0.7"
 prost-types = "0.7"
-tracing = "0.1.*"
-tracing-subscriber = "0.2.*"
-tracing-futures = "0.2.*"
-
-tonic = { version="0.4" }
-tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
-futures = { version = "0.3", default-features = false, features = ["alloc"] }
-tower = { version = "0.4" }
-
-serde = { version = "1.0", features = ["derive"] }
-grapl-graph-descriptions = { path="../graph-descriptions" }
-
-thiserror = "1.0"
-
-dgraph-tonic = { version = "0.9", features = ["dgraph-1-1"] }
-
-uuid = { version = "*", features=["v4"] }
-serde_json = "1.0"
-lazy_static = "1.4"
-anyhow = "1.0.38"
-futures-retry = "0.6.0"
-dgraph_query_lib = "0.1.0"
-grapl-observe = { path = "../grapl-observe" }
-grapl-config = { path="../grapl-config" }
-
 rusoto_dynamodb = { version="0.46", default_features = false, features=["rustls"] }
-lru = "0.6.5"
-grapl-utils = { path = "../grapl-utils" }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+thiserror = "1"
+tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
+tonic = { version="0.4" }
+tower = { version = "0.4" }
+tracing = "0.1.*"
+tracing-futures = "0.2.*"
+tracing-subscriber = "0.2.*"
+uuid = { version = "0.8", features=["v4"] }
 
 [build-dependencies]
 tonic-build = { version="0.4", features = ["prost"] }
