Remove MinIO in favor of Localstack's S3 implementation
In order to more closely mimic AWS in our testing environments, we
need a way to implement our bucket notifications to SNS topics. As
long as we are using MinIO, we can't do that.

This commit replaces MinIO with Localstack's built-in S3
implementation, which should allow this. This removes testing
infrastructure, and also allows us to start removing a bunch of
special-casing in our code, starting with the website bucket
configuration logic in our Pulumi code, as well as modifying certain
Pulumi stack configuration values.

One interesting aspect of this was that we needed to strip the leading
`/` from the S3 object keys (derived from URL paths) in our
`grapl-ux-router` code. Apparently, MinIO was able to deal with
finding an object named "/static/js/2.642cd0fc.chunk.js", whereas
Localstack is more strict and wants this to be simply
"static/js/2.642cd0fc.chunk.js" (this appears to be more proper
anyway). The only code changed here was explicitly "local only"

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,24 +85,6 @@ services:
         aliases:
           - ${REDIS_HOST}
 
-  # While localstack does offer S3 capabilities, it's not actually
-  # MinIO, which is a very full-featured and faithful S3 clone. We
-  # have noticed test failures when we use localstack's s3, so we will
-  # continue to use MinIO.
-  s3:
-    image: minio/minio
-    command: server /data
-    environment:
-      - MINIO_ACCESS_KEY=${S3_ACCESS_KEY_ID}
-      - MINIO_REGION_NAME=${AWS_REGION}
-      - MINIO_SECRET_KEY=${S3_ACCESS_KEY_SECRET}
-    ports:
-      - 127.0.0.1:${S3_PORT_EXTERNAL}:${S3_PORT_INTERNAL}
-    networks:
-      default:
-        aliases:
-          - ${S3_HOST}
-
   localstack:
     image: localstack/localstack:0.12.6
     ports:
@@ -112,7 +94,7 @@ services:
     environment:
       - IMAGE_NAME=localstack/localstack:0.12.6
       - EDGE_PORT=${LOCALSTACK_PORT}
-      - SERVICES=dynamodb,sqs,secretsmanager
+      - SERVICES=dynamodb,s3,secretsmanager,sqs
       - DEBUG=${DEBUG- }
       - DATA_DIR=${DATA_DIR- }
     volumes:
@@ -153,7 +135,6 @@ services:
       - grapl-provision
       - localstack
       - redis
-      - s3
 
   grapl-osquery-subgraph-generator:
     image: grapl/grapl-osquery-subgraph-generator:${TAG:-latest}
@@ -176,7 +157,6 @@ services:
       - grapl-provision
       - localstack
       - redis
-      - s3
 
   grapl-node-identifier:
     image: grapl/grapl-node-identifier:${TAG:-latest}
@@ -200,7 +180,6 @@ services:
       - grapl-provision
       - localstack
       - redis
-      - s3
 
   grapl-node-identifier-retry-handler:
     image: grapl/grapl-node-identifier-retry-handler:${TAG:-latest}
@@ -224,7 +203,6 @@ services:
       - grapl-provision
       - localstack
       - redis
-      - s3
 
   grapl-graph-merger:
     image: grapl/grapl-graph-merger:${TAG:-latest}
@@ -250,7 +228,6 @@ services:
       - grapl-provision
       - localstack
       - redis
-      - s3
 
   grapl-analyzer-dispatcher:
     image: grapl/grapl-analyzer-dispatcher:${TAG:-latest}
@@ -271,7 +248,6 @@ services:
     tty: false
     depends_on:
       - localstack
-      - s3
 
   ########################################################################
   # Python Services
@@ -303,7 +279,6 @@ services:
       - dgraph
       - localstack
       - redis
-      - s3
 
   grapl-ux-router:
     image: grapl/grapl-ux-router:${TAG:-latest}
@@ -343,7 +318,6 @@ services:
     depends_on:
       - dgraph
       - localstack
-      - s3
 
   # TODO: really, this service should be grapl-auth
   grapl-engagement-edge:
@@ -398,7 +372,6 @@ services:
     depends_on:
       - dgraph
       - localstack
-      - s3
     networks:
       default:
         aliases:
@@ -459,7 +432,6 @@ services:
       <<: *s3-env
     depends_on:
       - grapl-provision
-      - s3
 
   grapl-graphql-endpoint:
     image: grapl/grapl-graphql-endpoint:${TAG:-latest}
@@ -502,15 +474,10 @@ services:
     image: grapl/grapl-local-pulumi:${TAG:-latest}
     command: |
       /bin/bash -c "
-         wait-for-it ${S3_HOST}:${S3_PORT_INTERNAL} --timeout=60 &&
          wait-for-it ${LOCALSTACK_HOST}:${LOCALSTACK_PORT} --timeout=60 &&
          sleep 10 &&
          pulumi login --local &&
          pulumi stack init local-grapl --non-interactive &&
-         # See pulumi/README.md fro why we do these configuration overrides
-         pulumi config set aws:accessKey ${FAKE_AWS_ACCESS_KEY_ID} --plaintext &&
-         pulumi config set aws:secretKey ${FAKE_AWS_SECRET_ACCESS_KEY} --plaintext &&
-         pulumi config set --path 'aws:endpoints[0].s3' ${S3_ENDPOINT} &&
          pulumi up --yes --skip-preview --stack=local-grapl &&
          # NOTE: This is running in localstack's network namespace, so
          # we will need to wait on localstack, NOT grapl-pulumi.
@@ -526,7 +493,6 @@ services:
       PULUMI_CONFIG_PASSPHRASE: local-grapl-passphrase
     depends_on:
       - localstack
-      - s3
 
   grapl-provision:
     image: grapl/grapl-provision:${TAG:-latest}
