--- a/local-grapl.env
+++ b/local-grapl.env
@@ -34,18 +34,6 @@ GRAPL_UX_ROUTER_PORT=8901
 # Redis default port
 REDIS_PORT=6379
 
-# MinIO default port.
-#
-# While localstack does have an S3 implementation, we've noted some
-# test failures using it. Until we fully understand the nature of that
-# failure, we will continue using MinIO as our S3 substitute.
-#
-# NOTE: If you change this value, please edit the scripts in
-# etc/local_grapl/bin/ as well. This is only until we can deal with
-# those scripts in a better, more formalized way.
-S3_PORT_INTERNAL=9000 # default value
-S3_PORT_EXTERNAL=${S3_PORT_INTERNAL}
-
 # Localstack Secretsmanager
 SECRETSMANAGER_PORT=${LOCALSTACK_PORT}
 
@@ -93,7 +81,6 @@ GRAPL_UX_ROUTER_HOST=ux-router.grapl.test
 ########################################################################
 
 REDIS_ENDPOINT=http://${REDIS_HOST}:${REDIS_PORT}
-S3_ENDPOINT=http://${S3_HOST}:${S3_PORT_INTERNAL}
 
 # The remaining endpoints are all just aliases for our unified
 # Localstack service
@@ -101,19 +88,17 @@ LOCALSTACK_ENDPOINT=http://${LOCALSTACK_HOST}:${LOCALSTACK_PORT}
 DYNAMODB_ENDPOINT=${LOCALSTACK_ENDPOINT}
 SQS_ENDPOINT=${LOCALSTACK_ENDPOINT}
 SECRETSMANAGER_ENDPOINT=${LOCALSTACK_ENDPOINT}
+S3_ENDPOINT=${LOCALSTACK_ENDPOINT}
 
 # Credentials
 ########################################################################
-# NOTE: If you change these values, please edit
-# etc/local_grapl/bin/upload_analyzer_local.sh and
-# upload-sysmon-logs.py as well. This is only until we can deal with
-# those scripts in a better, more formalized way.
+# NOTE: These are the default values assumed by Localstack
 #
 # NOTE: If you change these values, please edit the scripts in
 # etc/local_grapl/bin/ as well. This is only until we can deal with
 # those scripts in a better, more formalized way.
-FAKE_AWS_ACCESS_KEY_ID="THIS_IS_A_FAKE_AWS_ACCESS_KEY_ID"
-FAKE_AWS_SECRET_ACCESS_KEY="THIS_IS_A_FAKE_AWS_SECRET_ACCESS_KEY"
+FAKE_AWS_ACCESS_KEY_ID="test"
+FAKE_AWS_SECRET_ACCESS_KEY="test"
 
 DYNAMODB_ACCESS_KEY_ID="${FAKE_AWS_ACCESS_KEY_ID}"
 DYNAMODB_ACCESS_KEY_SECRET="${FAKE_AWS_SECRET_ACCESS_KEY}"
