insert node_type and display_property into dynamodb table when grapl model plugin is uploaded
WIP - query dynamo db...failing on export

WIP - need to figure out how to access dynamodb from graphql endpoint, might be an auth error?

set up dynamodb client

WIP - add env vars for dynamodb to graphql-service in dockercompose.yml | work on db query

WIP - Add new dynamoDB table for display-name

remove explicit checking of node_types in front-end

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -441,9 +441,11 @@ services:
     environment:
       <<: *aws-region
       <<: *dgraph-env
+      <<: *dynamodb-env
       IS_LOCAL: "True"
       JWT_SECRET_ID: "JWT_SECRET_ID"
       PORT: ${GRAPL_GRAPHQL_PORT}
+      GRAPL_DISPLAY_TABLE: "${DEPLOYMENT_NAME}-grapl_display_table"
       <<: *secretsmanager-env
     depends_on:
       - dgraph
