--- a/src/python/graplctl/graplctl/BUILD
+++ b/src/python/graplctl/graplctl/BUILD
@@ -1,1 +1,8 @@
-python_library()
+python_library(
+    name="graplctl_lib",
+)
+
+pex_binary(
+    entry_point="cli.py:main",
+    zip_safe=False,
+)
