--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -90,50 +90,27 @@ jobs:
       - name: Check whether grapl_graph_descriptions version has been bumped
         run: |
           . venv/bin/activate
-          if [[ "$CHANNEL" == "latest" ]]; then
-              python etc/build_scripts/check_pypi_version.py \
-                grapl_graph_descriptions \
-                $(cat src/rust/graph-descriptions/VERSION)
-          else
-              python etc/build_scripts/check_pypi_version.py \
-                grapl_graph_descriptions \
-                $(cat src/rust/graph-descriptions/VERSION) \
-                true
-          fi
+          python etc/build_scripts/check_pypi_version.py \
+            grapl_graph_descriptions \
+            $(cat src/rust/graph-descriptions/VERSION)
           deactivate
 
       - name: Check whether grapl_analyzerlib version has been bumped
         run: |
           . venv/bin/activate
-          if [[ "$CHANNEL" == "latest" ]]; then
-              python etc/build_scripts/check_pypi_version.py \
-                grapl_analyzerlib \
-                $(cat src/python/grapl_analyzerlib/VERSION)
-          else
-              python etc/build_scripts/check_pypi_version.py \
-                grapl_analyzerlib \
-                $(cat src/python/grapl_analyzerlib/VERSION) \
-                true
-          fi
+          python etc/build_scripts/check_pypi_version.py \
+            grapl_analyzerlib \
+            $(cat src/python/grapl_analyzerlib/VERSION)
           deactivate
 
       - name: Check whether grapl-common version has been bumped
         run: |
           . venv/bin/activate
-          if [[ "$CHANNEL" == "latest" ]]; then
-              python etc/build_scripts/check_pypi_version.py \
-                grapl-common \
-                $(cat src/python/grapl-common/VERSION)
-          else
-              python etc/build_scripts/check_pypi_version.py \
-                grapl-common \
-                $(cat src/python/grapl-common/VERSION) \
-                true
-          fi
+          python etc/build_scripts/check_pypi_version.py \
+            grapl-common \
+            $(cat src/python/grapl-common/VERSION)
           deactivate
 
-  # https://github.com/grapl-security/issue-tracker/issues/224
-  # TODO: Figure out the new way to mark latest/beta
   release-services:
     runs-on: ubuntu-latest
     needs: [rust-unit-tests, python-unit-tests, js-unit-tests, integration-tests, check-pypi]
@@ -146,21 +123,11 @@ jobs:
           ./etc/ci_scripts/clean_gh_actions_space.sh
           ./etc/ci_scripts/install_requirements.sh
 
-      - name: Determine release channel
-        run: |
-          BRANCH=${{ github.event.release.target_commitish }}
-          if [[ "$BRANCH" == "master" ]]; then
-              CHANNEL="latest"
-          else
-              CHANNEL="beta"
-          fi
-          echo "CHANNEL=$CHANNEL" >> $GITHUB_ENV
-
       - name: Export tag
         env:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
-          echo "TAG=$VERSION-$CHANNEL" >> $GITHUB_ENV
+          echo "TAG=$VERSION" >> $GITHUB_ENV
 
       - name: Log in to Docker registry
         run: |
