Remove reference to graph-descriptions

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -106,32 +106,34 @@ jobs:
       #       $CHECK_PYPI_VERSION_ARGS
       #     deactivate
 
-      - name: Check whether grapl_graph_descriptions version has been bumped
-        run: |
-          . venv/bin/activate
-          python etc/build_scripts/check_pypi_version.py \
-            grapl_graph_descriptions \
-            $(cat src/rust/graph-descriptions/VERSION) \
-            $CHECK_PYPI_VERSION_ARGS
-          deactivate
+    - name: Check whether grapl_analyzerlib version has been bumped
+      run: |
+        . venv/bin/activate
+        python etc/build_scripts/check_pypi_version.py \
+          grapl_analyzerlib \
+          $(cat src/python/grapl_analyzerlib/VERSION) \
+          $CHECK_PYPI_VERSION_ARGS
+        deactivate
 
-      - name: Check whether grapl_analyzerlib version has been bumped
-        run: |
-          . venv/bin/activate
-          python etc/build_scripts/check_pypi_version.py \
-            grapl_analyzerlib \
-            $(cat src/python/grapl_analyzerlib/VERSION) \
-            $CHECK_PYPI_VERSION_ARGS
-          deactivate
+    - name: Check whether grapl-common version has been bumped
+      run: |
+        . venv/bin/activate
+        python etc/build_scripts/check_pypi_version.py \
+          grapl-common \
+          $(cat src/python/grapl-common/VERSION) \
+          $CHECK_PYPI_VERSION_ARGS
+        deactivate
 
-      - name: Check whether grapl-common version has been bumped
-        run: |
-          . venv/bin/activate
-          python etc/build_scripts/check_pypi_version.py \
-            grapl-common \
-            $(cat src/python/grapl-common/VERSION) \
-            $CHECK_PYPI_VERSION_ARGS
-          deactivate
+    - name: Check whether grapl-tests-common version has been bumped
+      run: |
+        . venv/bin/activate
+        python etc/build_scripts/check_pypi_version.py \
+          grapl-tests-common \
+          $(cat src/python/grapl-tests-common/VERSION) \
+          $CHECK_PYPI_VERSION_ARGS
+        deactivate
+
+
 
   release-services:
     runs-on: ubuntu-latest
